--- a/SDL-1.2.15/Makefile.n3ds
+++ b/SDL-1.2.15/Makefile.n3ds
@@ -15,7 +15,6 @@ OBJS =	src/SDL.o \
 	src/audio/SDL_mixer.o \
 	src/audio/SDL_wave.o \
 	src/audio/n3ds/SDL_n3dsaudio.o \
-	src/audio/dummy/SDL_dummyaudio.o \
 	src/cdrom/SDL_cdrom.o \
 	src/cdrom/dummy/SDL_syscdrom.o \
 	src/cpuinfo/SDL_cpuinfo.o \
@@ -37,10 +36,10 @@ OBJS =	src/SDL.o \
 	src/stdlib/SDL_stdlib.o \
 	src/stdlib/SDL_string.o \
 	src/thread/SDL_thread.o \
-	src/thread/generic/SDL_syssem.o \
-	src/thread/generic/SDL_systhread.o \
-	src/thread/generic/SDL_sysmutex.o \
-	src/thread/generic/SDL_syscond.o \
+	src/thread/n3ds/SDL_syssem.o \
+	src/thread/n3ds/SDL_systhread.o \
+	src/thread/n3ds/SDL_sysmutex.o \
+	src/thread/n3ds/SDL_syscond.o \
 	src/timer/SDL_timer.o \
 	src/timer/n3ds/SDL_systimer.o \
 	src/video/SDL_blit.o \
@@ -93,19 +92,19 @@ $(TARGET_LIB): $(OBJS)
 
 %.shbin.o: %.pica
 	@echo $(notdir $<)
-	$(eval CURBIN := $(patsubst %.pica,%.shbin,$(notdir $<)))
-	$(eval CURH := $(patsubst %.pica,%.psh.h,$(notdir $<)))
+	$(eval CURBIN := $(patsubst %.pica,%.shbin,$<))
+	$(eval CURH := $(patsubst %.pica,%.psh.h,$<))
 	@picasso -h $(CURH) -o $(CURBIN) $<
 	@bin2s $(CURBIN) | $(AS) -o $@
-	@echo "extern const u8" `(echo $(CURBIN) | sed -e 's/^\([0-9]\)/_\1/' | tr . _)`"_end[];" > `(echo $(CURBIN) | tr . _)`.h
-	@echo "extern const u8" `(echo $(CURBIN) | sed -e 's/^\([0-9]\)/_\1/' | tr . _)`"[];" >> `(echo $(CURBIN) | tr . _)`.h
-	@echo "extern const u32" `(echo $(CURBIN) | sed -e 's/^\([0-9]\)/_\1/' | tr . _)`_size";" >> `(echo $(CURBIN) | tr . _)`.h
+	@echo "extern const u8" `(echo $(notdir $(CURBIN)) | sed -e 's/^\([0-9]\)/_\1/' | tr . _)`"_end[];" > `(echo $(CURBIN) | tr . _)`.h
+	@echo "extern const u8" `(echo $(notdir $(CURBIN)) | sed -e 's/^\([0-9]\)/_\1/' | tr . _)`"[];" >> `(echo $(CURBIN) | tr . _)`.h
+	@echo "extern const u32" `(echo $(notdir $(CURBIN)) | sed -e 's/^\([0-9]\)/_\1/' | tr . _)`_size";" >> `(echo $(CURBIN) | tr . _)`.h
 
 install: $(TARGET_LIB)
-	@mkdir -p "$(DEVKITPRO)/portlibs/armv6k/lib"
-	@cp  $(TARGET_LIB) "$(DEVKITPRO)/portlibs/armv6k/lib"
-	@mkdir -p "$(DEVKITPRO)/portlibs/armv6k/include/SDL"
-	@cp include/*.h "$(DEVKITPRO)/portlibs/armv6k/include/SDL"
+	@mkdir -p "$(DEVKITPRO)/portlibs/3ds/lib"
+	@cp  $(TARGET_LIB) "$(DEVKITPRO)/portlibs/3ds/lib"
+	@mkdir -p "$(DEVKITPRO)/portlibs/3ds/include/SDL"
+	@cp include/*.h "$(DEVKITPRO)/portlibs/3ds/include/SDL"
 	@echo "Installed!"
 
 clean:
