--- a/SDL_image/Makefile
+++ b/SDL_image/Makefile
@@ -29,13 +29,13 @@ INCLUDES = -I./include -I$(CTRULIB)/include
 # options for code generation
 #---------------------------------------------------------------------------------
 ARCH		:=	-march=armv6k -mtune=mpcore -mfloat-abi=hard
-CFLAGS		:=	-g -Wall -O2 -mword-relocations -fno-short-enums \
+CFLAGS		:=	-g -Wall -O2 -mword-relocations \
 			-fomit-frame-pointer -ffast-math \
 			$(ARCH)
 CFLAGS		+=	$(INCLUDES) -DARM11 -D_3DS -D__3DS__ -DENABLE_3DS -DLOAD_BMP \
 				-DLOAD_GIF -DLOAD_LBM -DLOAD_PCX -DLOAD_PNM -DLOAD_TGA -DLOAD_XCF \
 				-DLOAD_XPM -DLOAD_XV -DLOAD_JPG -DLOAD_PNG \
-				-I$(CTRULIB)/../portlibs/armv6k/include -I$(CTRULIB)/../portlibs/armv6k/include/SDL
+				-I$(CTRULIB)/../portlibs/armv6k/include -I$(CTRULIB)/../portlibs/3ds/include/SDL
 CXXFLAGS	:=      $(CFLAGS) -fno-rtti -fno-exceptions -std=gnu++11
 ASFLAGS		:=	-g $(ARCH)
 LDFLAGS		:=	-specs=3dsx.specs -g $(ARCH) -Wl,-Map,$(notdir $*.map)
@@ -50,8 +50,11 @@ $(TARGET_LIB): $(OBJS)
 	$(AR) -rc $@ $^
 
 install: $(TARGET_LIB)
-	@mkdir -p "$(DEVKITPRO)/portlibs/armv6k/lib"
-	@cp  $(TARGET_LIB) "$(DEVKITPRO)/portlibs/armv6k/lib"
+	@mkdir -p "$(DEVKITPRO)/portlibs/3ds/lib"
+	@cp  $(TARGET_LIB) "$(DEVKITPRO)/portlibs/3ds/lib"
+	@mkdir -p "$(DEVKITPRO)/portlibs/3ds/include"
+	@mkdir -p "$(DEVKITPRO)/portlibs/3ds/include/SDL"
+	@cp SDL_image.h "$(DEVKITPRO)/portlibs/3ds/include/SDL"
 	@echo "Installed!"
 
 clean:
