--- a/SDL-1.2.15/configure.in
+++ b/SDL-1.2.15/configure.in
@@ -925,6 +925,35 @@ AC_HELP_STRING([--enable-ipod], [configure SDL to work with iPodLinux [[default=
     fi
 }
 
+Checkn3ds()
+{
+    AC_ARG_ENABLE(n3ds,
+AC_HELP_STRING([--enable-n3ds], [configure SDL to work with n3ds [[default=no]]]),
+        , enable_n3ds=no)
+	if test x$enable_n3ds = xyes; then
+        ARCH=n3ds
+        EXTRA_CFLAGS="$EXTRA_CFLAGS -D_3DS"
+        CFLAGS="$CFLAGS -D_3DS"
+        EXTRA_LDFLAGS="$EXTRA_LDFLAGS -L${DEVKITPRO}/libctru/lib -lcitro3d -lctru -lm"
+ 		AC_DEFINE(SDL_TIMER_N3DS)
+		SOURCES="$SOURCES $srcdir/src/timer/n3ds/*.c"
+		have_timers=yes
+		AC_DEFINE(SDL_AUDIO_DRIVER_N3DS)
+		SOURCES="$SOURCES $srcdir/src/audio/n3ds/*.c"
+		have_audio=yes
+		AC_DEFINE(SDL_JOYSTICK_N3DS)
+		SOURCES="$SOURCES $srcdir/src/joystick/n3ds/*.c"
+		have_joystick=yes
+		AC_DEFINE(SDL_THREAD_N3DS)
+		SOURCES="$SOURCES $srcdir/src/thread/n3ds/*.c"
+		have_threads=yes
+		AC_DEFINE(SDL_VIDEO_DRIVER_N3DS)
+		SOURCES="$SOURCES $srcdir/src/video/n3ds/*.c"
+		have_video=yes
+		PREBUILDOBJECTS="$srcdir/src/video/n3ds/vshader.shbin.lo"
+	fi
+}
+
 dnl Find the nanox include and library directories
 CheckNANOX()
 {
@@ -2314,6 +2343,9 @@ AC_HELP_STRING([--enable-rpath], [use an rpath when linking SDL [[default=yes]]]
 
 dnl Set up the configuration based on the host platform!
 case "$host" in
+    *arm-none-eabi*) 
+        Checkn3ds
+        ;;
     arm-*-elf*) # FIXME: Can we get more specific for iPodLinux?
         ARCH=linux
         CheckDummyVideo
@@ -2948,6 +2980,7 @@ AC_SUBST(ac_aux_dir)
 AC_SUBST(INCLUDE)
 AC_SUBST(SOURCES)
 AC_SUBST(OBJECTS)
+AC_SUBST(PREBUILDOBJECTS)
 AC_SUBST(SDLMAIN_SOURCES)
 AC_SUBST(SDLMAIN_OBJECTS)
 AC_SUBST(SDLMAIN_LDFLAGS)
