--- a/SDL-1.2.15/include/SDL_config.h.in
+++ b/SDL-1.2.15/include/SDL_config.h.in
@@ -185,6 +185,7 @@
 #undef SDL_AUDIO_DRIVER_SNDMGR
 #undef SDL_AUDIO_DRIVER_SUNAUDIO
 #undef SDL_AUDIO_DRIVER_WAVEOUT
+#undef SDL_AUDIO_DRIVER_N3DS
 
 /* Enable various cdrom drivers */
 #undef SDL_CDROM_AIX
@@ -218,6 +219,7 @@
 #undef SDL_JOYSTICK_WINMM
 #undef SDL_JOYSTICK_USBHID
 #undef SDL_JOYSTICK_USBHID_MACHINE_JOYSTICK_H
+#undef SDL_JOYSTICK_N3DS
 
 /* Enable various shared object loading systems */
 #undef SDL_LOADSO_BEOS
@@ -239,6 +241,7 @@
 #undef SDL_THREAD_PTHREAD_RECURSIVE_MUTEX_NP
 #undef SDL_THREAD_SPROC
 #undef SDL_THREAD_WIN32
+#undef SDL_THREAD_N3DS
 
 /* Enable various timer systems */
 #undef SDL_TIMER_BEOS
@@ -251,6 +254,7 @@
 #undef SDL_TIMER_UNIX
 #undef SDL_TIMER_WIN32
 #undef SDL_TIMER_WINCE
+#undef SDL_TIMER_N3DS
 
 /* Enable various video drivers */
 #undef SDL_VIDEO_DRIVER_AALIB
@@ -293,6 +297,7 @@
 #undef SDL_VIDEO_DRIVER_X11_XRANDR
 #undef SDL_VIDEO_DRIVER_X11_XV
 #undef SDL_VIDEO_DRIVER_XBIOS
+#undef SDL_VIDEO_DRIVER_N3DS
 
 /* Enable OpenGL support */
 #undef SDL_VIDEO_OPENGL
