--- a/SDL-1.2.15/Makefile.in
+++ b/SDL-1.2.15/Makefile.in
@@ -34,7 +34,7 @@ WINDRES	= @WINDRES@
 
 TARGET  = libSDL.la
 SOURCES = @SOURCES@
-OBJECTS = @OBJECTS@ @PREBUILDOBJECTS@
+OBJECTS = @OBJECTS@
 
 SDLMAIN_TARGET = libSDLmain.la
 SDLMAIN_SOURCES = @SDLMAIN_SOURCES@
